--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 33
     buildToolsVersion '30.0.3'
     defaultConfig {
-        applicationId "com.ruetgmail.taufiqur.tipsntricks"
+        applicationId "com.maruf.tech.agecalulatorbangla"
         minSdkVersion 19
         targetSdkVersion 33
         versionCode 1
